overflow fix

--- a/development/scss/scss-nav-footer/components/_news-feature.scss
+++ b/development/scss/scss-nav-footer/components/_news-feature.scss
@@ -1,6 +1,7 @@
 .news-feature {
 	padding: $luc-panel $luc-wrap;
 	background-color: $luc-copper-light;
+	overflow: hidden;
 
 	&__header {
 		display: flex;
